test_output_equivalence_20.txt
   Compiling ox_codegen v0.1.0 (/home/gefferson-souza/Desktop/personal-projects/TypeRust/crates/ox_codegen)
warning: unused imports: `ArrowExpr`, `NewExpr`, and `Tpl`
 --> crates/ox_codegen/src/convert/func.rs:3:5
  |
3 |     ArrowExpr, AwaitExpr, BinExpr, BinaryOp, CallExpr, Callee, Decl, Expr, ExprOrSpread, FnDecl,
  |     ^^^^^^^^^
4 |     Lit, MemberExpr, NewExpr, Pat, Stmt, Tpl, UpdateExpr, UpdateOp,
  |                      ^^^^^^^             ^^^
  |
  = note: `#[warn(unused_imports)]` on by default

   Compiling ox_orchestrator v0.1.0 (/home/gefferson-souza/Desktop/personal-projects/TypeRust/crates/ox_orchestrator)
   Compiling integration_tests v0.1.0 (/home/gefferson-souza/Desktop/personal-projects/TypeRust/tests)
warning: `ox_codegen` (lib) generated 1 warning (run `cargo fix --lib -p ox_codegen` to apply 1 suggestion)
    Finished `test` profile [unoptimized + debuginfo] target(s) in 1.52s
     Running unittests src/lib.rs (target/debug/deps/integration_tests-27c4c794ab087e30)

running 1 test
CWD: Ok("/home/gefferson-souza/Desktop/personal-projects/TypeRust/tests")
Running TypeScript fixture: "/home/gefferson-souza/Desktop/personal-projects/TypeRust/tests/fixtures/equivalence/recursion.ts"
TypeScript Output:
{"result":55}
Compiling to Rust in: "/tmp/.tmpHeWHKW/output"
Running Rust generated code...
Rust Output:
{"result":55.0}
CWD: Ok("/home/gefferson-souza/Desktop/personal-projects/TypeRust/tests")
Running TypeScript fixture: "/home/gefferson-souza/Desktop/personal-projects/TypeRust/tests/fixtures/equivalence/data_processing.ts"
TypeScript Output:
[{"role":"User","name":"Alice","status":"Active","id":"ID_123"},{"role":"Admin","name":"Charlie","status":"Active","id":"ID_123"}]
Compiling to Rust in: "/tmp/.tmpD0BgMp/output"
Running Rust generated code...
Rust Output:
[{"id":"ID_123","name":"Alice","role":"User","status":"Active"},{"id":"ID_123","name":"Charlie","role":"Admin","status":"Active"}]
CWD: Ok("/home/gefferson-souza/Desktop/personal-projects/TypeRust/tests")
Running TypeScript fixture: "/home/gefferson-souza/Desktop/personal-projects/TypeRust/tests/fixtures/equivalence/class_state.ts"
TypeScript Output:
Final: 35
Compiling to Rust in: "/tmp/.tmpe1ko1U/output"
Method: increment, is_handler: false, decorators: 0
Method: report, is_handler: false, decorators: 0
Running Rust generated code...

thread 'verify_equivalence' panicked at tests/src/infrastructure/equivalence.rs:69:9:
Rust execution failed:
error[E0594]: cannot assign to `self.count`, which is behind a `&` reference
  --> src/lib.rs:17:9
   |
17 |         self.count = self.count.clone() + &amount;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `self` is a `&` reference, so the data it refers to cannot be written
   |
help: consider changing this to be a mutable reference
   |
16 |     pub fn increment(&mut self, amount: f64) -> () {
   |                       +++

For more information about this error, try `rustc --explain E0594`.
error: could not compile `typerust_app` (lib) due to 1 previous error

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
test verify_equivalence ... FAILED

failures:

failures:
    verify_equivalence

test result: FAILED. 0 passed; 1 failed; 0 ignored; 0 measured; 30 filtered out; finished in 49.24s

error: test failed, to rerun pass `-p integration_tests --lib`
